Fixed bad spinner on mobile

--- a/airquality-function/static/style.css
+++ b/airquality-function/static/style.css
@@ -4,8 +4,8 @@ html {
 }
 
 body {
-    width: 100%;
     max-width: 720px;
+    width: 100%;
     height: 100%;
     font-family: sans-serif;
     margin: 0 auto 0 auto;
@@ -44,6 +44,7 @@ a {
     animation-iteration-count: infinite;
     animation-name: spin;
     animation-timing-function: linear;
+    align-self: center;
 }
 
 #info {
